--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,4 +1,4 @@
-// http://ionicframework.com/docs/theming/
+// http://ionicframework.com/docs/v2/theming/
 
 
 // App Global Sass
@@ -14,3 +14,114 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+@import "cornerStone.scss";
+
+$transparent:transparent;
+$icoSize : 2.4rem;
+$full-width : 100%;
+$full-height : 100%;
+$errorColor : red;
+$absolute : absolute;
+$font-sm : 12px;
+$font-md : 16px;
+$font-lg : 18px;
+$inherit : inherit;
+
+.no-padding-l {
+  padding-left: 0px !important;
+}
+.no-padding-r {
+  padding-right: 0px !important;
+}
+.no-padding-b {
+  padding-bottom: 0px !important;
+}
+.no-padding-t {
+  padding-top: 0px !important;
+}
+
+.item-md ion-icon[item-start] + .item-inner, .item-md ion-icon[item-start] + .item-input {
+  margin-left: 8px;
+}
+
+.navBtnRight {
+  padding: 0px 7px !important;
+}
+
+.watermark{
+  background-image: csBackgroundSvg('loginBG.svg');
+  background-size: $full-width $full-height;
+  background-repeat: no-repeat;
+}
+
+// Custom Navbar Style
+ion-navbar.toolbar.toolbar-ios-primary.statusbar-padding {
+  padding-top: 20px;
+}
+
+ion-toolbar.toolbar.toolbar-ios.toolbar-ios-primary {
+  padding-top: 20px;
+}
+
+/*Corner Stone THeme */
+.csLightText{
+  color:#fff;
+}
+.csStrip{
+    background:$csStripColor;
+    box-shadow: 0px -3px 7px $color1 !important;
+    margin-bottom: 2px;
+}
+.csBlueColor{
+  background:$csDarkStrip;
+  .item-ios[detail-push] .item-inner, button.item-ios:not([detail-none]) .item-inner, a.item-ios:not([detail-none]) .item-inner{
+    background-image: url('');
+    }
+}
+.csSelected{
+  background: $color1;
+  color: white;
+  font-weight: bold;
+  border-left:3px solid white;
+  ion-icon{
+    color:white;
+  }  
+}
+.noBorder-item{
+  .item-inner {
+    border-bottom: 0px !important;
+  }
+}
+
+ion-slides {
+  width: 100%;
+  height: 50%;
+  display: block;
+
+}
+
+.toolbar-title-md {
+  font-weight: 600;
+}
+.csShadow{
+  box-shadow: 0 0 25px grey;
+}
+.list-header-md {
+    border-bottom: 2px solid #aeaeae;
+    border-top: 0px !important;
+    background: transparent;
+    color:#333333;
+}
+
+.foodmenu {
+  td.monthview-primary-with-event:before{
+    color: transparent !important;
+  }
+}
+
+.image {
+  background-color: transparent !important;
+  margin: 0px !important;
+  box-shadow: 0px 0px !important;
+}
