--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,25 @@
-<ion-nav [root]="rootPage"></ion-nav>
+
+<ion-menu [content]="content">
+
+    <ion-header class="csProfileHeader" tappable (tap)="openPage()" menuClose>
+        <div class="csAccBgImg csHeight160">
+            <div class="csCenter csProfileHeader">
+                <div class="csAccBgImg">
+                    <br><img [src]="picUrl !='null' ? userImage: defaultUserImage" class="csAccImg csCenter">
+                    <div class="csAccName" text-center>{{name | titlecase}}</div>
+                </div>
+            </div>
+        </div>
+    </ion-header>
+
+    <ion-content>
+        <ion-list>
+            <button menuClose ion-item icon-start *ngFor="let p of pages" (click)="openPage(p)">
+         <img [src]="p.icon" item-start class="csWidth30">
+         {{p.title}}
+       </button>
+        </ion-list>
+    </ion-content>
+</ion-menu>
+
+<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
