--- a/src/pages/complaint/view/view.html
+++ b/src/pages/complaint/view/view.html
@@ -36,8 +36,8 @@
 
         <div text-center class="csWhiteText">
 
-            <div>{{complaint.createdAt | date:'mediumDate'}}
-                <span *ngIf="complaint.closedOn"> - {{complaint.closedOn | date:'mediumDate'}} </span>
+            <div>{{complaint.createdAt | amDateFormat:'LL'}}
+                <span *ngIf="complaint.closedOn"> - {{complaint.closedOn | amDateFormat:'LL'}} </span>
             </div>
         </div>
 
@@ -51,14 +51,14 @@
             </ion-col>
 
             <ion-col width-33 *ngIf="complaint.statusId === 4">
-                <button ion-button full small round class="csVieCompBtn" [style.border-color]="complaint.statusColor || 'green' ">
+                <button ion-button full small round (click)="reOpenComplaint()" class="csVieCompBtn" [style.border-color]="complaint.statusColor || 'green' ">
                 <ion-icon name="ios-thumbs-down" [style.color]="complaint.statusColor || 'green' "></ion-icon>
                 <span class="csCenter csFiveLeft csVWSmallText" [style.color]="complaint.statusColor || 'green' ">Reopen</span>
               </button>
             </ion-col>
 
             <ion-col width-33 *ngIf="complaint.statusId != 6 && complaint.statusId != 4">
-                <button ion-button full small round class="csVieCompBtn" [style.border-color]="complaint.statusColor || 'green' ">
+                <button ion-button full small round (click)="closeComplaint()" class="csVieCompBtn" [style.border-color]="complaint.statusColor || 'green' ">
                 <ion-icon name="ios-thumbs-down" [style.color]="complaint.statusColor || 'green' "></ion-icon>
                 <span class="csCenter csFiveLeft csVWSmallText" [style.color]="complaint.statusColor || 'green' ">Close</span>
               </button>
