--- a/src/app/app.html
+++ b/src/app/app.html
@@ -14,7 +14,7 @@
 
     <ion-content>
         <ion-list>
-            <button menuClose ion-item icon-start *ngFor="let p of pages" (click)="openPage(p)">
+            <button menuClose ion-item  *ngFor="let p of pages" (click)="openPage(p)">
          <img [src]="p.icon" item-start class="csWidth30">
          {{p.title}}
        </button>
