complaint-main page created in custom-components,

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,7 +6,7 @@
             <div class="csCenter csProfileHeader">
                 <div class="csAccBgImg">
                     <br><img [src]="picUrl !='null' ? userImage: defaultUserImage" class="csAccImg csCenter">
-                    <div class="csAccName" text-center>{{name | titlecase}}</div>
+                    <div class="csAccName" text-center>{{userName | titlecase}}</div>
                 </div>
             </div>
         </div>
