--- a/src/app/app.html
+++ b/src/app/app.html
@@ -14,9 +14,9 @@
 
     <ion-content>
         <ion-list>
-            <button menuClose ion-item  *ngFor="let p of pages" (click)="openPage(p)">
-         <img [src]="p.icon" item-start class="csWidth30">
-         {{p.title}}
+            <button menuClose ion-item  *ngFor="let option of sideMenuOptions" (click)="openPage(option)">
+         <img [src]="option.icon" item-start class="csWidth30">
+         {{option.title}}
        </button>
         </ion-list>
     </ion-content>
