--- a/src/app/app.html
+++ b/src/app/app.html
@@ -14,7 +14,7 @@
 
     <ion-content>
         <ion-list>
-            <button menuClose ion-item  *ngFor="let option of sideMenuOptions" (click)="openPage(option)">
+            <button  ion-item  *ngFor="let option of sideMenuOptions" (click)="openPage(option)">
          <img [src]="option.icon" item-start class="csWidth30">
          {{option.title}}
        </button>
