module and lecturer name shown(if available) while voting survey

--- a/src/pages/management-app/evaluation/view/view.html
+++ b/src/pages/management-app/evaluation/view/view.html
@@ -54,7 +54,7 @@
                 <p>
                     <b>Module: </b>
                 </p>
-                <p *ngFor="let md of evaluation.module">{{md}}</p>
+                <span *ngFor="let md of evaluation.module">{{md}}</span>
             </ion-item>
 
 
