--- a/src/pages/management-app/survey/view/view.html
+++ b/src/pages/management-app/survey/view/view.html
@@ -105,6 +105,7 @@
             <ion-card-title>
                 Ques: {{q.question}}<br>
             </ion-card-title>
+            <p>{{q.optionTypeName}}</p>
             <ion-list>
                 <ion-item *ngFor="let option of q.options">
                     <ion-row>
