profile pic delete done

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,7 +5,7 @@
         <div class="csAccBgImg csHeight160">
             <div class="csCenter csProfileHeader">
                 <div class="csAccBgImg">
-                    <br><img [src]="picUrl !='null' ? userImage: defaultUserImage" class="csAccImg csCenter">
+                    <br><img [src]="userImage !='null' ? userImage: defaultUserImage" class="csAccImg csCenter">
                     <div class="csAccName" text-center>{{userName | titlecase}}</div>
                 </div>
             </div>
