--- a/src/pages/management-app/planner/view/view.html
+++ b/src/pages/management-app/planner/view/view.html
@@ -92,3 +92,14 @@
 
     </div>
 </ion-content>
+
+<ion-footer>
+    <button ion-button icon-start col-5 (click)="onEditBtn()">
+        <ion-icon name="create"></ion-icon>
+        Edit
+    </button>
+    <button ion-button icon-start col-5 (click)="onDeleteBtn()">
+        <ion-icon name="trash"></ion-icon>
+        Delete
+    </button>
+</ion-footer>
