time table shown mangment done

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -25,6 +25,7 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #fff,
+white
   dark:       #222,
   cool:       #607D8B,
   fab:        #3e9e3e,
@@ -32,7 +33,36 @@ $colors: (
   color1:     #00bcd4,
   colorLight: #80deea,
   transparent: rgba(0, 0, 0, 0),
-  csStripColor:#797d80
+  csStripColor:#797d80,
+
+
+
+
+
+
+  facebook:   #3a589b,
+  twitter:    #55acef,
+  google:     #dc4e42,
+  color2:        #673AB7,
+  color3:        #03A9F4,
+  color4:        #4CAF50,
+  color5:        #FFEB3B,
+  color6:        #FF5722,
+  color7:        #607D8B,
+  color8:        #E91E63,
+  color9:        #3F51B5,
+  color10:        #00BCD4,
+  color11:        #8BC34A,
+  color12:        #FFC107,
+  color13:        #795548,
+  color14:        #9C27B0,
+  color15:        #2196F3,
+  color16:        #009688,
+  color17:        #CDDC39,
+  color18:        #FF9800,
+  color19:        #9E9E9E,
+
+
 );
 
 $color0 :       #fd4544;
