--- a/src/pages/management-app/poll/view/view.html
+++ b/src/pages/management-app/poll/view/view.html
@@ -7,7 +7,7 @@
     </nl-modal-navbar>
 </ion-header>
 
-<ion-content class="csGrayBackground">
+<ion-content >
 
     <ion-card *ngIf="poll && showInfo">
         <ion-card-content>
