--- a/src/pages/management-app/survey/view/view.html
+++ b/src/pages/management-app/survey/view/view.html
@@ -7,7 +7,7 @@
     </nl-modal-navbar>
 </ion-header>
 
-<ion-content class="csGrayBackground">
+<ion-content >
 
     <ion-card *ngIf="survey && showInfo">
         <ion-card-header>
