--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -47,7 +47,7 @@ white
   // color3:        #03A9F4,
   // color4:        #4CAF50,
   // color5:        #FFEB3B,
-  color6:        #FF5722,
+  // color6:        #FF5722,
   color7:        #607D8B,
   color8:        #E91E63,
   color9:        #3F51B5,
@@ -67,7 +67,8 @@ white
   color2: #F9DD6A,
   color3: #9BDFEC,
   color4: #BEA1FC,
-  color5: #F894BC
+  color5: #F894BC,
+  color6: #fca2a2,
 
 
 
