--- a/src/custom-components/complaint-main/complaint-main.scss
+++ b/src/custom-components/complaint-main/complaint-main.scss
@@ -44,6 +44,42 @@ ion-note {
 
 .view-complaint {
   background: $csBackgroundColor;
+  div[flex]{
+    display:flex;
+    justify-content: space-between;
+    align-items:center;
+    align-content:center;
+    color:white;
+    div{
+      flex-grow:1;
+    }
+    h1{
+      ion-icon{
+        font-size:50px;
+      }
+    }
+    button{
+      margin:10px 2px 5px 2px;
+      width:100%;
+
+      border: 1px solid;
+      box-shadow: 0 3px 5px rgba(0, 0, 0, 0.14), 0 3px 5px rgba(0, 0, 0, 0.21), 0 0 0 0 transparent;
+      background: color($colors,secondary);
+    }
+    button:hover, button:active{
+      color:color($colors,secondary) !important;
+      background:transparent;
+      border-color:1px solid color($colors,secondary) !important;
+    }
+  }
+  ion-label{
+    margin: 11px 8px 11px 11px;
+  }
+  div[date]{
+    font-size:12px;
+    color:white;
+  }
+
   ion-card {
     ion-item {
       h2 {
@@ -202,13 +238,4 @@ div {
 }
 .csColorDim{
   color:#d3d8e0;
-}
-
-.csViewCompBtnContainer {
-  display: flex;
-  justify-content: space-around;
-}
-.csViewCompBtnContainer {
-  display: flex;
-  justify-content: space-around;
 }
