--- a/src/pages/management-app/complaint/complaint.scss
+++ b/src/pages/management-app/complaint/complaint.scss
@@ -1,4 +1,44 @@
 $csBoardColor:#3f3f3f;
+
+complaint{
+  ion-searchbar{
+    position:fixed;
+    top: 50px;
+    z-index: 2;
+  }
+  .nav-up{
+    top: -60px;
+  }
+  .scroll-content{
+    top:-56px !important;
+    padding-top: 60px !important;
+    }
+    .hide-header{
+    top: -20px;
+    transition: top 0.5s ease-in-out;
+    }
+    .show-header{
+    top: 64px;
+    transition: top 0.5s ease-in-out;
+    }
+    .scroll-content{
+      margin-top:105px !important;
+    }
+}
+sort-filter{
+  position: fixed;
+  width: 100%;
+  height: 45px;
+  z-index: 1;
+  transition: bottom 0.6s ease-in-out;
+}
+.hide-footer{
+  bottom:-45px;
+}
+.show-footer{
+  bottom:0 !important;
+}
+
 ion-note {
   ion-icon {
     margin-right: 3px;
@@ -43,6 +83,42 @@ ion-note {
 
 .view-complaint {
   background: $csBackgroundColor;
+  div[flex]{
+    display:flex;
+    justify-content: space-between;
+    align-items:center;
+    align-content:center;
+    color:white;
+    div{
+      flex-grow:1;
+    }
+    h1{
+      ion-icon{
+        font-size:50px;
+      }
+    }
+    button{
+      margin:10px 2px 5px 2px;
+      width:100%;
+
+      border: 1px solid;
+      box-shadow: 0 3px 5px rgba(0, 0, 0, 0.14), 0 3px 5px rgba(0, 0, 0, 0.21), 0 0 0 0 transparent;
+      background: color($colors,secondary);
+    }
+    button:hover, button:active{
+      color:color($colors,secondary) !important;
+      background:transparent;
+      border-color:1px solid color($colors,secondary) !important;
+    }
+  }
+  ion-label{
+    margin: 11px 8px 11px 11px;
+  }
+  div[date]{
+    font-size:12px;
+    color:white;
+  }
+
   ion-card {
     ion-item {
       h2 {
@@ -203,11 +279,4 @@ div {
   color:#d3d8e0;
 }
 
-.csViewCompBtnContainer {
-  display: flex;
-  justify-content: space-around;
-}
-.csViewCompBtnContainer {
-  display: flex;
-  justify-content: space-around;
-}
+
