Fixed scroll bug in management complaint

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -159,6 +159,6 @@ ion-header{
   box-shadow: 0 0px 35px color($colors,primary);
 }
 
-ion-searchbar{
+.searchbar-ios{
   background:color($colors,primary) !important;
 }
