--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -125,3 +125,37 @@ ion-slides {
   margin: 0px !important;
   box-shadow: 0px 0px !important;
 }
+
+
+//appreciation
+.csAppCard{
+  border-radius: 20px !important;
+}
+.csAppCerti{
+      background-size: cover;
+  background-image: csBackgroundSvg('appCertificate.svg');
+}
+.csAppImageBlock{
+  float:left !important;
+  margin:5px;
+}
+.csAppImg{
+  width: 80px;
+  height: 80px;
+  border-radius: 100%;
+  border: 4px solid $color1;
+}
+.csAppBadge{
+      box-shadow: 0px 3px 20px lighten($color1,25);
+  width: 50%;
+position: relative;
+  margin-bottom: -23px !important;
+  z-index: 10;
+}
+.csAppContent{
+  margin-top:15px !important;
+      margin-bottom: -15px !important;
+}
+.csAppFooter{
+  border-radius: 20px !important;
+}
