Cpdated background color

--- a/src/app/cornerStone.scss
+++ b/src/app/cornerStone.scss
@@ -153,6 +153,9 @@ ion-toolbar {
 .csGrayBackground {
     background: url('../assets/svg/gBoard.svg');
 }
+.csPlainGray{
+    background: #efeeee;
+}
 .csParagraph {
     font-size: 1.4rem;
     white-space: pre-line;
