--- a/src/pages/management-app/poll/view/view.html
+++ b/src/pages/management-app/poll/view/view.html
@@ -107,10 +107,9 @@
 
     <ion-card *ngIf="poll">
 
-        <ion-card-content>
-            <ion-card-title>
-                Ques: {{poll.question}}
-            </ion-card-title>
+            <ion-card-header>
+                <h2>{{poll.question}}</h2>
+            </ion-card-header>
             <ion-list>
                 <ion-item *ngFor="let option of poll.options">
                     <ion-row>
@@ -124,7 +123,6 @@
                     <progress-bar [progress]="option.percent"></progress-bar>
                 </ion-item>
             </ion-list>
-        </ion-card-content>
 
     </ion-card>
 </ion-content>
